[MS030920240353DS] - Added problems on binary tree